New chapter-based design

--- a/index.html
+++ b/index.html
@@ -1,18 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🥊</text></svg>" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Brooklyn Food Fight - Where Recipes Battle for Glory</title>
-    <meta name="description" content="Discover amazing recipes in Brooklyn Food Fight - an interactive recipe collection where dishes compete for your attention. Search by ingredient, cooking method, or cuisine style." />
-    <meta property="og:title" content="Brooklyn Food Fight - Where Recipes Battle for Glory" />
-    <meta property="og:description" content="Discover amazing recipes in Brooklyn Food Fight - an interactive recipe collection where dishes compete for your attention." />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://brooklynfoodfight.com" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Brooklyn Food Fight" />
-    <meta name="twitter:description" content="Where recipes battle for glory. Search hundreds of recipes by ingredient, method, or cuisine." />
+    <meta name="description" content="Brooklyn Food Fight - Where recipes battle for glory. Search recipes by ingredient, cuisine, or name." />
+    <title>Brooklyn Food Fight</title>
   </head>
   <body>
     <div id="root"></div>
